Correction: align menu in header

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -30,6 +30,7 @@
 }
 
 .menu {
+  align-self: center;
 }
 
 .menu ul {
